--- a/Day22Events/color/index.html
+++ b/Day22Events/color/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Circle Generator</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <!-- <div class="circle">Hi</div> -->
-  <script src="first.js"></script>
+  <!-- <div class="circle"></div>   isko JS m bnate hai -->
+  <script src="./first.js"></script>
 </body>
 </html>
